--- a/index.html
+++ b/index.html
@@ -35,65 +35,65 @@
             <div class="time-block col-md-1" id="hour">
                 08:00
             </div>
-            <textarea class="textarea col-md-10 description" id="0800">
+            <textarea class="textarea col-md-10 description" id="8">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1" id="button8"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1" id="hour">
                 09:00
             </div>
-            <textarea class="textarea col-md-10 description" id="0900">
+            <textarea class="textarea col-md-10 description" id="9">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1" id="button9"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1" id="hour">
                 10:00
             </div>
-            <textarea class="textarea col-md-10 description" id="1000">
+            <textarea class="textarea col-md-10 description" id="10">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1" id="button10"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1" id="hour">
                 11:00
             </div>
-            <textarea class="textarea col-md-10 description" id="1100">
+            <textarea class="textarea col-md-10 description" id="11">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1" id="button11"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1" id="hour"> 
                 12:00
             </div>
-            <textarea class="textarea col-md-10 description" id="1200">
+            <textarea class="textarea col-md-10 description" id="12">
             </textarea>
-            <button class="time-block saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="time-block saveBtn col-md-1" id="button12"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1" id="hour">
                 13:00
             </div>
-            <textarea class="textarea col-md-10 description" id="1300">
+            <textarea class="textarea col-md-10 description" id="13">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1"  id="button13"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1" id="hour">
                 14:00
             </div>
-            <textarea class="textarea col-md-10 description" id="1400">
+            <textarea class="textarea col-md-10 description" id="14">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1" id="button14"><i class="saveBtn-i">add</i></button>
         </div>
         <div  class="row">
             <div class="time-block col-md-1 hour" id="hour">
                 15:00
             </div>
-            <textarea class="textarea col-md-10 description" id="1500">
+            <textarea class="textarea col-md-10 description" id="15">
             </textarea>
-            <button class="saveBtn col-md-1"><i class="saveBtn-i">add</i></button>
+            <button class="saveBtn col-md-1" id="button15"><i class="saveBtn-i">add</i></button>
         </div>
         
     </div>
